# ODE_PDE_Solvers

./: LICENSE.txt  README.md
ODE_PDE_CPP/: CMakeLists.txt  README.md
ODE_PDE_CPP/.github/workflows/: ci.yml
ODE_PDE_CPP/include/common/: clamp.hpp  csv_writer.hpp
ODE_PDE_CPP/src/heat2d/: main.cpp
ODE_PDE_CPP/src/pendulum_sliding_mode/: main.cpp
ODE_PDE_Csharp/: ODE_PDE_Csharp.sln  README.md
ODE_PDE_Csharp/Heat2D/: Heat2D.csproj  Program.cs
ODE_PDE_Csharp/PendulumSlidingMode/: Program.cs
ODE_PDE_Go/: .gitignore  README.md  go.mod
ODE_PDE_Go/src/heat2d/: main.go
ODE_PDE_Go/src/pendulum_sliding_mode/: main.go
ODE_PDE_Java/: README.md  pom.xml
ODE_PDE_Java/src/main/java/com/mohammadijoo/odepde/heat2d/: Heat2DMain.java
ODE_PDE_Java/src/main/java/com/mohammadijoo/odepde/pendulum_smc/: CartPoleSMCMain.java
ODE_PDE_Julia/: .gitignore  Project.toml  README.md
ODE_PDE_Julia/src/heat2d/: main.jl
ODE_PDE_Julia/src/pendulum_sliding_mode/: main.jl
ODE_PDE_Python/: README.md  requirements.txt
ODE_PDE_Python/src/heat2d/: heat2d_numpy.py  main.py
ODE_PDE_Python/src/pendulum_sliding_mode/: main.py  pendulum_smc_numpy_scipy.py
ODE_PDE_Ruby/: Gemfile  README.md
ODE_PDE_Ruby/lib/common/: csv_writer.rb  gnuplot_helpers.rb  math_utils.rb
ODE_PDE_Ruby/src/heat2d/: main.rb
ODE_PDE_Ruby/src/pendulum_sliding_mode/: main.rb
ODE_PDE_Rust/: .gitignore  Cargo.toml  README.md
ODE_PDE_Rust/src/heat2d/: main.rs
ODE_PDE_Rust/src/pendulum_sliding_mode/: main.rs
ODE_PDE_Scala/: .gitignore  README.md  pom.xml
ODE_PDE_Scala/scripts/: run_heat2d.cmd  run_heat2d.sh  run_pendulum_smc.cmd  run_pendulum_smc.sh
ODE_PDE_Scala/src/main/scala/com/mohammadijoo/odepde/common/: CsvUtils.scala  PlotUtils.scala
ODE_PDE_Scala/src/main/scala/com/mohammadijoo/odepde/heat2d/: Heat2DApp.scala
ODE_PDE_Scala/src/main/scala/com/mohammadijoo/odepde/pendulum_sliding_mode/: CartPoleSmcApp.scala
